--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>I love you</title>
+    <title>Anh yêu vợ mia nhiều lắmm :33</title>
   </head>
   <body>
+	<audio id="background-audio">
+	  <source src="nhacnen.mp3" type="audio/mpeg">
+	  Your browser does not support the audio element.
+	</audio>
+
+	<button id="play-audio">Chơi nhạc :3</button>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
